--- a/AppGenerated/Logistics/LogisticsReactApp/src/App.css
+++ b/AppGenerated/Logistics/LogisticsReactApp/src/App.css
@@ -58,3 +58,74 @@
     transform: rotate(360deg);
   }
 }
+
+.header {
+  justify-content: space-between;
+  align-items: center;
+}
+.leftheader {
+  display: flex;
+  align-items: center;
+}
+.rightheader {
+  margin: 2rem;
+}
+.logoheader {
+  margin: 5px;
+  border-radius: 0.8rem;
+  height: 5rem;
+  width: 5rem;
+}
+.intro {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  margin: 2rem;
+  background-color: rgb(253, 247, 247);
+}
+.intro__left {
+  display: flex;
+  flex-direction: column;
+  width: 12rem;
+}
+.intro__right {
+  margin: 2rem;
+}
+.into__h1{
+
+  margin-left: 40px;
+}
+.into__p {
+  text-align: left;
+  margin-top: -13px;
+  margin-left: 40px;
+  width: 20rem;
+}
+.buttons {
+  display: flex;
+  margin: 3rem;
+}
+.buttons__btn1 {
+  display: flex;
+  flex-direction: column;
+  margin: 3rem;
+  padding: 2rem;
+  border-radius: 10px;
+  background-color: rgb(219, 245, 245);
+  justify-content: space-between;
+  cursor: pointer;
+}
+.buttons__btn2 {
+  display: flex;
+  flex-direction: column;
+  margin: 3rem;
+  padding: 2rem;
+ border-radius: 10px;
+  background-color: rgb(219, 245, 245);
+  cursor: pointer;
+}
+.buttons__h4 {
+  position: relative;
+  top: 30px;
+  padding-top: 1rem;
+}
