--- a/AppGenerated/Logistics/LogisticsReactApp/src/App.css
+++ b/AppGenerated/Logistics/LogisticsReactApp/src/App.css
@@ -11,7 +11,7 @@
   position: absolute;
   top: 100%; /* Bottom of button */
   right: 0;
-  left:auto;
+  left: auto;
   margin: auto;
   margin-left: -60px; /* More to the left */
 }
@@ -91,8 +91,7 @@
 .intro__right {
   margin: 2rem;
 }
-.into__h1{
-
+.into__h1 {
   margin-left: 40px;
 }
 .into__p {
@@ -102,28 +101,24 @@
   width: 20rem;
 }
 .buttons {
-  display: flex;
-  margin: 3rem;
+  margin: 3rem 0;
+  padding: 0 15px;
 }
-.buttons__btn1 {
-  display: flex;
-  flex-direction: column;
-  margin: 3rem;
+.buttons__btn {
+  text-align: center;
   padding: 2rem;
   border-radius: 10px;
   background-color: rgb(219, 245, 245);
-  justify-content: space-between;
   cursor: pointer;
+  margin: 0 auto;
+  border: 1px solid #dee2e6 !important;
 }
-.buttons__btn2 {
-  display: flex;
-  flex-direction: column;
-  margin: 3rem;
-  padding: 2rem;
- border-radius: 10px;
-  background-color: rgb(219, 245, 245);
-  cursor: pointer;
+
+.buttons__btn:hover {
+  box-shadow: 0 0.125rem 0.25rem rgb(0 0 0 / 8%) !important;
+  border-color: #17a2b8 !important;
 }
+
 .buttons__h4 {
   position: relative;
   top: 30px;
