--- a/LogisticsReactApp/src/components/transportcapacitybooking/transportcapacitybookingForm.css
+++ b/LogisticsReactApp/src/components/transportcapacitybooking/transportcapacitybookingForm.css
@@ -38,3 +38,7 @@ button.btn.dropdown-toggle {
   border-top-left-radius: 0px !important;
   border-bottom-left-radius: 0px !important;
 }
+
+label.mfe-2 {
+  margin-right: 5px;
+}
