--- a/LogisticsReactApp/src/components/transportcapacitybooking/transportcapacitybookingForm.css
+++ b/LogisticsReactApp/src/components/transportcapacitybooking/transportcapacitybookingForm.css
@@ -100,3 +100,9 @@ label.mfe-2 {
 	font-size: 19px;
 	cursor: not-allowed;
 }
+.VolumeCodes {
+	margin-top: 11px;
+}
+.input-group {
+	margin-top: 1rem;
+}
