--- a/LogisticsReactApp/src/utils/Alert/Alert.css
+++ b/LogisticsReactApp/src/utils/Alert/Alert.css
@@ -1,14 +1,14 @@
 .AlertPopup {
-    position: absolute !important;
-    z-index: 1000;
+  position: fixed;
+  top:10%;
+  left:50%;
+  transform: translate(-50%,-50%);
+  
+  z-index: 1000;
 }
  
   
-  /* .ctrl{
-    width:100%;
-    position:absolute !important;
-    
-  } */
+ 
   
   .nortification{
       /* display:block; */
@@ -16,7 +16,7 @@
       width:250px;
       padding:5px 0;
       /* position:absolute; */
-    top:-5rem;
+    top:0rem;
     left:50%;
     margin-left:-90px;
     box-sizing:border-box;
@@ -56,10 +56,10 @@
       {
     from {transform: translate(0,-100px);}
     10% {transform: translate(0,10px);}
-    /* 12% {transform: translate(0,22px);} */
+    12% {transform: translate(0,22px);}
     50% {transform: translate(0,10px);}
-    /* 80% {transform: translate(0,20px);} */
-    /* 85% {transform: translate(0,25px);} */
+    80% {transform: translate(0,20px);}
+    85% {transform: translate(0,25px);}
     to {transform: translate(0,-100px);}
   }
 
