--- a/LogisticsReactApp/src/utils/Alert/Alert.css
+++ b/LogisticsReactApp/src/utils/Alert/Alert.css
@@ -8,9 +8,25 @@
 }
  
   
- 
+ .bgRed {
+  font-size:14px;
+  width:250px;
+  padding:5px 0;
+  /* position:absolute; */
+top:0rem;
+left:50%;
+margin-left:-90px;
+box-sizing:border-box;
+border-radius:25px;
+background-color:rgb(226, 32, 32);
+color:white;
+font-weight: bold;
+text-align: center;
+box-shadow: 0 3px 0 rgba(0,0,0,0.2);
+
+ }
   
-  .nortification{
+  .bgBlue {
       /* display:block; */
       font-size:14px;
       width:250px;
